--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
       <h2 class="titulo">Objetivo</h2>
       <p>
         Sou aluno de Análise e Desenvolvimento de sistemas na PUC-GO, estou
-        cursando o 2° semestre e estou procurando uma vaga de estágio para
-        iniciar minha carreira na area de TI.
+        cursando o 2° semestre e estou buscando me aproximar do mercado e aprender novas tecnologias.
       </p>
     </div>
     <div id="formacao">
