correções de estilo

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         class="foto"
       />
       <div>
-        <h3 class="descricao">Informações pessoais</h3>
-        <p class="descricao">
+        <h3 class="info">Informações pessoais</h3>
+        <p class="info">
           <strong>Brasileiro, solteiro, 19 anos</strong>
           <br />
           <strong>Telefone: </strong><a href="tel:+5562992768728" class="contato">+55 (62) 99276-8728</a> <br />
@@ -32,7 +32,7 @@
     </div>
     <div id="objetivo">
       <h2 class="titulo">Objetivo</h2>
-      <p>
+      <p class="texto">
         Sou aluno de Análise e Desenvolvimento de sistemas na PUC-GO, estou
         cursando o 2° semestre e estou buscando me aproximar do mercado e aprender novas tecnologias.
       </p>
@@ -41,13 +41,13 @@
       <h2 class="titulo">Formação</h2>
       <ul>
         <li>
-          <strong>Ensino médio: </strong><br />
-          <em>CEPI Senador Teotônio Vilela</em> - completo
+          <strong class="caracteristica">Ensino médio: </strong><br />
+          <p class="descricao"><em>CEPI Senador Teotônio Vilela</em> - completo</p>
         </li>
         <li>
-          <strong>Ensino Superior: </strong><br />
-          <em>Tecnologia em Análise e Desenvolvimento de Sistemas PUC-GO</em> -
-          Cursando
+          <strong class="caracteristica">Ensino Superior: </strong><br />
+          <p class="descricao"><em>Tecnologia em Análise e Desenvolvimento de Sistemas PUC-GO</em> -
+            Cursando</p>
         </li>
       </ul>
     </div>
@@ -55,35 +55,29 @@
       <h2 class="titulo">Experiência</h2>
       <ul>
         <li>
-          <strong>Ajudante de Pedreiro</strong><br />
-          <em>Dezembro de 2023 - Abril de 2024</em><br />
-          Ajudava na limpeza do local de trabalho, entrega de ferramentas e
-          materiais, preparo de materiais para uso, pequenas atividades de
-          acabamento e transporte de materiais.
+          <strong class="caracteristica">Ajudante de Pedreiro</strong><br />
+          <em class="descricao">Dezembro de 2023 - Abril de 2024</em><br />
+          <p class="texto">Ajudava na limpeza do local de trabalho, entrega de ferramentas e
+            materiais, preparo de materiais para uso, pequenas atividades de
+            acabamento e transporte de materiais.</p>
         </li>
         <br />
         <li>
-          <strong>Auxiliar de Produção - Shopee</strong><br />
-          <em>Abril de 2024 - Maio de 2024</em><br />
-          auxiliava no transporte, separação e despacho de mercadorias, garantia
-          a qualidade e segurança dos produtos que futuramente seriam enviados
-          para entrega.
+          <strong class="caracteristica">Auxiliar de Produção - Shopee</strong><br />
+          <em class="descricao">Abril de 2024 - Maio de 2024</em><br />
+          <p class="texto">auxiliava no transporte, separação e despacho de mercadorias, garantia a qualidade e segurança dos produtos que futuramente seriam enviados para entrega.</p>
         </li>
         <br />
         <li>
-          <strong>Ajudante Geral - JSL S/A</strong><br />
-          <em>Maio de 2024 - Dezembro de 2024</em><br />
-          Auxiliava na organização do ambiente, assim como organização das
-          mercadorias em estoque, auxiliava na entrega de matéria prima e
-          garantia o funcionamento constante das máquinas.
+          <strong class="caracteristica">Ajudante Geral - JSL S/A</strong><br />
+          <em class="descricao">Maio de 2024 - Dezembro de 2024</em><br />
+          <p class="texto">Auxiliava na organização do ambiente, assim como organização das mercadorias em estoque, auxiliava na entrega de matéria prima e garantia o funcionamento constante das máquinas.</p>
         </li>
         <br />
         <li>
-          <strong>Auxiliar Administrativo - Apreseg Assessoria</strong><br />
-          <em>Janeiro de 2025 - Fevereiro de 2025</em><br />
-          auxiliava nas demandas administrativas no escritório, fazendo
-          agendamentos, atendendo clientes, verificando cadastros e entregando
-          documentos.
+          <strong class="caracteristica">Auxiliar Administrativo - Apreseg Assessoria</strong><br />
+          <em class="descricao">Janeiro de 2025 - Fevereiro de 2025</em><br />
+          <p class="texto">auxiliava nas demandas administrativas no escritório, fazendo agendamentos, atendendo clientes, verificando cadastros e entregando documentos.</p>
         </li>
         <br />
       </ul>
@@ -92,20 +86,20 @@
       <h2 class="titulo">Cursos Profissionalizantes</h2>
       <ul>
         <li>
-          <strong>Lógica de Programação</strong><br />
-          <em>Senai</em>
+          <strong class="caracteristica">Lógica de Programação</strong><br />
+          <em class="descricao">Senai</em>
         </li>
         <li>
-          <strong>Manutenção de computadores e celulares</strong><br />
-          <em>CEBRAC Cursos Profissionalizantes</em>
+          <strong class="caracteristica">Manutenção de computadores e celulares</strong><br />
+          <em class="descricao">CEBRAC Cursos Profissionalizantes</em>
         </li>
       </ul>
     </div>
     <div id="idiomas">
       <h2 class="titulo">Idiomas</h2>
       <ul>
-        <li><strong>Português</strong> - <em>Nativo</em></li>
-        <li><strong>Inglês</strong> - <em>Intermediário</em></li>
+        <li><strong class="caracteristica">Português</strong> - <em class="descricao">Nativo</em></li>
+        <li><strong class="caracteristica">Inglês</strong> - <em class="descricao">Intermediário</em></li>
       </ul>
     </div>
   </body>
