Atualização de estilo

--- a/index.html
+++ b/index.html
@@ -8,128 +8,140 @@
   </head>
 
   <body>
-    <div>
+    <div id="cabecalho">
       <h1 class="nome">Samuel Rodrigues Pinheiro</h1>
-      <div id="informacoes">
-        <img
-          src="Images/Foto.jpeg"
-          alt="Foto de perfil"
-          width="100px"
-          class="foto"
-        />
-        <div class="info">
-          <h3>Informações pessoais</h3>
-          <p>
-            <strong>Brasileiro, solteiro, 19 anos</strong>
-            <br />
-            <strong>Telefone: </strong
-            ><a href="tel:+5562992768728" class="contato">+55 (62) 99276-8728</a>
-            <br />
-            <strong>E-mail:</strong>
-            <a href="mailto:samuel.rodriguesp0306@gmail.com" class="contato"
-              >samuel.rodriguesp0306@gmail.com</a
-            ><br />
-            <strong>GitHub:</strong>
-            <a href="https://github.com/Samuelrp03" target="_blank" class="contato"
-              >Samuelrp03</a
-            >
+    </div>
+    <div id="conteudo">
+      <div id="menu-esquerdo">
+
+      </div>
+      <div id="principal">
+        <div id="informacoes-pessoais">
+          <img
+            src="Images/Foto.jpeg"
+            alt="Foto de perfil"
+            width="100px"
+            class="foto"
+          />
+          <div class="info">
+            <h3 class ="titulo">Informações pessoais</h3>
+            <p>
+              <strong>Brasileiro, solteiro, 19 anos</strong>
+              <br />
+              <strong>Telefone: </strong
+              ><a href="tel:+5562992768728" class="contato">+55 (62) 99276-8728</a>
+              <br />
+              <strong>E-mail:</strong>
+              <a href="mailto:samuel.rodriguesp0306@gmail.com" class="contato"
+                >samuel.rodriguesp0306@gmail.com</a
+              ><br />
+              <strong>GitHub:</strong>
+              <a href="https://github.com/Samuelrp03" target="_blank" class="contato"
+                >Samuelrp03</a
+              >
+            </p>
+          </div>
+        </div>
+        <div id="informacoes">
+          <h2 class="titulo">Objetivo</h2>
+          <p class="texto">
+            Sou aluno de Análise e Desenvolvimento de sistemas na PUC-GO, estou
+            cursando o 2° semestre e estou buscando me aproximar do mercado e
+            aprender novas tecnologias.
           </p>
+          <h2 class="titulo">Formação</h2>
+          <ul>
+            <li>
+              <strong class="caracteristica">Ensino médio: </strong><br />
+              <p class="descricao">
+                <em>CEPI Senador Teotônio Vilela</em> - completo
+              </p>
+            </li>
+            <br />
+            <li>
+              <strong class="caracteristica">Ensino Superior: </strong><br />
+              <p class="descricao">
+                <em>Tecnologia em Análise e Desenvolvimento de Sistemas PUC-GO</em>
+                - Cursando
+              </p>
+            </li>
+          </ul>
+          <h2 class="titulo">Experiência</h2>
+          <ul>
+            <li>
+              <strong class="caracteristica">Ajudante de Pedreiro</strong><br />
+              <em class="descricao">Dezembro de 2023 - Abril de 2024</em><br />
+              <p class="texto">
+                Ajudava na limpeza do local de trabalho, entrega de ferramentas e
+                materiais, preparo de materiais para uso, pequenas atividades de
+                acabamento e transporte de materiais.
+              </p>
+            </li>
+            <br />
+            <li>
+              <strong class="caracteristica">Auxiliar de Produção - Shopee</strong
+              ><br />
+              <em class="descricao">Abril de 2024 - Maio de 2024</em><br />
+              <p class="texto">
+                auxiliava no transporte, separação e despacho de mercadorias,
+                garantia a qualidade e segurança dos produtos que futuramente seriam
+                enviados para entrega.
+              </p>
+            </li>
+            <br />
+            <li>
+              <strong class="caracteristica">Ajudante Geral - JSL S/A</strong><br />
+              <em class="descricao">Maio de 2024 - Dezembro de 2024</em><br />
+              <p class="texto">
+                Auxiliava na organização do ambiente, assim como organização das
+                mercadorias em estoque, auxiliava na entrega de matéria prima e
+                garantia o funcionamento constante das máquinas.
+              </p>
+            </li>
+            <br />
+            <li>
+              <strong class="caracteristica"
+                >Auxiliar Administrativo - Apreseg Assessoria</strong
+              ><br />
+              <em class="descricao">Janeiro de 2025 - Fevereiro de 2025</em><br />
+              <p class="texto">
+                auxiliava nas demandas administrativas no escritório, fazendo
+                agendamentos, atendendo clientes, verificando cadastros e entregando
+                documentos.
+              </p>
+            </li>
+            <br />
+          </ul>
+          <h2 class="titulo">Cursos Profissionalizantes</h2>
+          <ul>
+            <li>
+              <strong class="caracteristica">Lógica de Programação</strong><br />
+              <em class="descricao">Senai</em>
+            </li>
+            <br />
+            <li>
+              <strong class="caracteristica"
+                >Manutenção de computadores e celulares</strong
+              ><br />
+              <em class="descricao">CEBRAC Cursos Profissionalizantes</em>
+            </li>
+          </ul>
+          <h2 class="titulo">Idiomas</h2>
+          <ul>
+            <li>
+              <strong class="caracteristica">Português</strong> -
+              <em class="descricao">Nativo</em>
+            </li>
+            <li>
+              <strong class="caracteristica">Inglês</strong> -
+              <em class="descricao">Intermediário</em>
+            </li>
+          </ul>
         </div>
       </div>
-      <h2 class="titulo">Objetivo</h2>
-      <p class="texto">
-        Sou aluno de Análise e Desenvolvimento de sistemas na PUC-GO, estou
-        cursando o 2° semestre e estou buscando me aproximar do mercado e
-        aprender novas tecnologias.
-      </p>
-      <h2 class="titulo">Formação</h2>
-      <ul>
-        <li>
-          <strong class="caracteristica">Ensino médio: </strong><br />
-          <p class="descricao">
-            <em>CEPI Senador Teotônio Vilela</em> - completo
-          </p>
-        </li>
-        <br />
-        <li>
-          <strong class="caracteristica">Ensino Superior: </strong><br />
-          <p class="descricao">
-            <em>Tecnologia em Análise e Desenvolvimento de Sistemas PUC-GO</em>
-            - Cursando
-          </p>
-        </li>
-      </ul>
-      <h2 class="titulo">Experiência</h2>
-      <ul>
-        <li>
-          <strong class="caracteristica">Ajudante de Pedreiro</strong><br />
-          <em class="descricao">Dezembro de 2023 - Abril de 2024</em><br />
-          <p class="texto">
-            Ajudava na limpeza do local de trabalho, entrega de ferramentas e
-            materiais, preparo de materiais para uso, pequenas atividades de
-            acabamento e transporte de materiais.
-          </p>
-        </li>
-        <br />
-        <li>
-          <strong class="caracteristica">Auxiliar de Produção - Shopee</strong
-          ><br />
-          <em class="descricao">Abril de 2024 - Maio de 2024</em><br />
-          <p class="texto">
-            auxiliava no transporte, separação e despacho de mercadorias,
-            garantia a qualidade e segurança dos produtos que futuramente seriam
-            enviados para entrega.
-          </p>
-        </li>
-        <br />
-        <li>
-          <strong class="caracteristica">Ajudante Geral - JSL S/A</strong><br />
-          <em class="descricao">Maio de 2024 - Dezembro de 2024</em><br />
-          <p class="texto">
-            Auxiliava na organização do ambiente, assim como organização das
-            mercadorias em estoque, auxiliava na entrega de matéria prima e
-            garantia o funcionamento constante das máquinas.
-          </p>
-        </li>
-        <br />
-        <li>
-          <strong class="caracteristica"
-            >Auxiliar Administrativo - Apreseg Assessoria</strong
-          ><br />
-          <em class="descricao">Janeiro de 2025 - Fevereiro de 2025</em><br />
-          <p class="texto">
-            auxiliava nas demandas administrativas no escritório, fazendo
-            agendamentos, atendendo clientes, verificando cadastros e entregando
-            documentos.
-          </p>
-        </li>
-        <br />
-      </ul>
-      <h2 class="titulo">Cursos Profissionalizantes</h2>
-      <ul>
-        <li>
-          <strong class="caracteristica">Lógica de Programação</strong><br />
-          <em class="descricao">Senai</em>
-        </li>
-        <br />
-        <li>
-          <strong class="caracteristica"
-            >Manutenção de computadores e celulares</strong
-          ><br />
-          <em class="descricao">CEBRAC Cursos Profissionalizantes</em>
-        </li>
-      </ul>
-      <h2 class="titulo">Idiomas</h2>
-      <ul>
-        <li>
-          <strong class="caracteristica">Português</strong> -
-          <em class="descricao">Nativo</em>
-        </li>
-        <li>
-          <strong class="caracteristica">Inglês</strong> -
-          <em class="descricao">Intermediário</em>
-        </li>
-      </ul>
+      <div id="menu-direito">
+
+      </div>
     </div>
   </body>
 </html>
