Atualização de estilos

--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
           </p>
           <h2 class="titulo">Formação</h2>
           <ul>
-            <li>
+            <li class="item">
               <strong class="caracteristica">Ensino médio: </strong><br />
               <p class="descricao">
                 <em>CEPI Senador Teotônio Vilela</em> - completo
               </p>
             </li>
             <br />
-            <li>
+            <li class="item">
               <strong class="caracteristica">Ensino Superior: </strong><br />
               <p class="descricao">
                 <em>Tecnologia em Análise e Desenvolvimento de Sistemas PUC-GO</em>
@@ -68,7 +68,7 @@
           </ul>
           <h2 class="titulo">Experiência</h2>
           <ul>
-            <li>
+            <li class="item">
               <strong class="caracteristica">Ajudante de Pedreiro</strong><br />
               <em class="descricao">Dezembro de 2023 - Abril de 2024</em><br />
               <p class="texto">
@@ -78,7 +78,7 @@
               </p>
             </li>
             <br />
-            <li>
+            <li class="item">
               <strong class="caracteristica">Auxiliar de Produção - Shopee</strong
               ><br />
               <em class="descricao">Abril de 2024 - Maio de 2024</em><br />
@@ -89,7 +89,7 @@
               </p>
             </li>
             <br />
-            <li>
+            <li class="item">
               <strong class="caracteristica">Ajudante Geral - JSL S/A</strong><br />
               <em class="descricao">Maio de 2024 - Dezembro de 2024</em><br />
               <p class="texto">
@@ -99,7 +99,7 @@
               </p>
             </li>
             <br />
-            <li>
+            <li class="item">
               <strong class="caracteristica"
                 >Auxiliar Administrativo - Apreseg Assessoria</strong
               ><br />
@@ -114,12 +114,12 @@
           </ul>
           <h2 class="titulo">Cursos Profissionalizantes</h2>
           <ul>
-            <li>
+            <li class="item">
               <strong class="caracteristica">Lógica de Programação</strong><br />
               <em class="descricao">Senai</em>
             </li>
             <br />
-            <li>
+            <li class="item">
               <strong class="caracteristica"
                 >Manutenção de computadores e celulares</strong
               ><br />
@@ -128,11 +128,11 @@
           </ul>
           <h2 class="titulo">Idiomas</h2>
           <ul>
-            <li>
+            <li class="item">
               <strong class="caracteristica">Português</strong> -
               <em class="descricao">Nativo</em>
-            </li>
-            <li>
+            </li><br>
+            <li class="item">
               <strong class="caracteristica">Inglês</strong> -
               <em class="descricao">Intermediário</em>
             </li>
