--- a/index.html
+++ b/index.html
@@ -1,147 +1,97 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Currículo</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-
-  <body>
-    <div id="cabecalho">
-      <h1 class="nome">Samuel Rodrigues Pinheiro</h1>
-    </div>
-    <div id="conteudo">
-      <div id="menu-esquerdo">
-
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portifólio</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header>
+    <h1>Samuel Rodrigues Pinheiro</h1>
+  </header>
+  <main>
+    <section class="card-top">
+      <img src="Images/foto.png" alt="Foto">
+      <div class="informacoes">
+        <h2>Informações</h2>
+          <p><strong>Brasileiro, 19 anos, solteiro</strong></p>
+          <p><strong>Telefone: </strong> <a href="tel:+5562992768728">+55 (62) 99276-8728</a></p>
+          <p><strong>Email: </strong> <a href="mailto:samuel.rodriguesp0306@gmail.com">samuel.rodriguesp0306@gmail.com</a></p>
+          <p><strong>Linkedin: </strong><a href="https://www.linkedin.com/in/samuel-rodrigues-aa89802bb/" target="_blank">Samuel Rodrigues</a></p>
+          <p><strong>GitHub: </strong><a href="https://github.com/Samuelrp03" target="_blank">Samuelrp03</a></strong></p>
       </div>
-      <div id="principal">
-        <div id="informacoes-pessoais">
-          <img
-            src="Images/Foto.jpeg"
-            alt="Foto de perfil"
-            width="100px"
-            class="foto"
-          />
-          <div class="info">
-            <h3 class ="titulo">Informações pessoais</h3>
-            <p>
-              <strong>Brasileiro, solteiro, 19 anos</strong>
-              <br />
-              <strong>Telefone: </strong
-              ><a href="tel:+5562992768728" class="contato">+55 (62) 99276-8728</a>
-              <br />
-              <strong>E-mail:</strong>
-              <a href="mailto:samuel.rodriguesp0306@gmail.com" class="contato"
-                >samuel.rodriguesp0306@gmail.com</a
-              ><br />
-              <strong>GitHub:</strong>
-              <a href="https://github.com/Samuelrp03" target="_blank" class="contato"
-                >Samuelrp03</a
-              >
-            </p>
-          </div>
-        </div>
-        <div id="informacoes">
-          <h2 class="titulo">Objetivo</h2>
-          <p class="texto">
-            Sou aluno de Análise e Desenvolvimento de sistemas na PUC-GO, estou
-            cursando o 2° semestre e estou buscando me aproximar do mercado e
-            aprender novas tecnologias.
-          </p>
-          <h2 class="titulo">Formação</h2>
-          <ul>
-            <li class="item">
-              <strong class="caracteristica">Ensino médio: </strong><br />
-              <p class="descricao">
-                <em>CEPI Senador Teotônio Vilela</em> - completo
-              </p>
-            </li>
-            <br />
-            <li class="item">
-              <strong class="caracteristica">Ensino Superior: </strong><br />
-              <p class="descricao">
-                <em>Tecnologia em Análise e Desenvolvimento de Sistemas PUC-GO</em>
-                - Cursando
-              </p>
-            </li>
-          </ul>
-          <h2 class="titulo">Experiência</h2>
-          <ul>
-            <li class="item">
-              <strong class="caracteristica">Ajudante de Pedreiro</strong><br />
-              <em class="descricao">Dezembro de 2023 - Abril de 2024</em><br />
-              <p class="texto">
-                Ajudava na limpeza do local de trabalho, entrega de ferramentas e
-                materiais, preparo de materiais para uso, pequenas atividades de
-                acabamento e transporte de materiais.
-              </p>
-            </li>
-            <br />
-            <li class="item">
-              <strong class="caracteristica">Auxiliar de Produção - Shopee</strong
-              ><br />
-              <em class="descricao">Abril de 2024 - Maio de 2024</em><br />
-              <p class="texto">
-                auxiliava no transporte, separação e despacho de mercadorias,
-                garantia a qualidade e segurança dos produtos que futuramente seriam
-                enviados para entrega.
-              </p>
-            </li>
-            <br />
-            <li class="item">
-              <strong class="caracteristica">Ajudante Geral - JSL S/A</strong><br />
-              <em class="descricao">Maio de 2024 - Dezembro de 2024</em><br />
-              <p class="texto">
-                Auxiliava na organização do ambiente, assim como organização das
-                mercadorias em estoque, auxiliava na entrega de matéria prima e
-                garantia o funcionamento constante das máquinas.
-              </p>
-            </li>
-            <br />
-            <li class="item">
-              <strong class="caracteristica"
-                >Auxiliar Administrativo - Apreseg Assessoria</strong
-              ><br />
-              <em class="descricao">Janeiro de 2025 - Fevereiro de 2025</em><br />
-              <p class="texto">
-                auxiliava nas demandas administrativas no escritório, fazendo
-                agendamentos, atendendo clientes, verificando cadastros e entregando
-                documentos.
-              </p>
-            </li>
-            <br />
-          </ul>
-          <h2 class="titulo">Cursos Profissionalizantes</h2>
-          <ul>
-            <li class="item">
-              <strong class="caracteristica">Lógica de Programação</strong><br />
-              <em class="descricao">Senai</em>
-            </li>
-            <br />
-            <li class="item">
-              <strong class="caracteristica"
-                >Manutenção de computadores e celulares</strong
-              ><br />
-              <em class="descricao">CEBRAC Cursos Profissionalizantes</em>
-            </li>
-          </ul>
-          <h2 class="titulo">Idiomas</h2>
-          <ul>
-            <li class="item">
-              <strong class="caracteristica">Português</strong> -
-              <em class="descricao">Nativo</em>
-            </li><br>
-            <li class="item">
-              <strong class="caracteristica">Inglês</strong> -
-              <em class="descricao">Intermediário</em>
-            </li>
-          </ul>
-        </div>
-      </div>
-      <div id="menu-direito">
-
-      </div>
-    </div>
-  </body>
+      </section>
+      <section class="card">
+        <h3 class="title">Objetivo</h3>
+        <p class="description">Sou estudante do curso de Análise e Desenvolvimento de Sistemas na Pontifícia Universidade Católica de Goiás (PUC-GO) e estou buscando uma oportunidade para me desenvolver como profissional</p>
+      </section>
+      <section class="card">
+        <h3 class="title">Formação Acadêmica</h3>
+        <ul class="description">
+          <li class="item">
+            <h4>Ensino médio</h4>
+            <em>Completo</em>
+            <p>CEPI Senador Teotônio Vilela</p>
+          </li>
+          <li class="item">
+            <h4>Ensino Superior</h4>
+            <em>Cursando</em>
+            <p>Tecnologia em Análise e Desenvolvimento de Sistemas - PUC-GO</p>
+          </li>
+        </ul>
+      </section>
+      <section class="card">
+        <h3 class="title">Experiência Profissional</h3>
+        <ul class="description">
+          <li class="item">
+            <h4>Ajudante de Pedreiro</h4>
+            <em>Dezembro de 2023 - março de 2024</em>
+            <p>Ajudava na limpeza do local de trabalho, entrega de ferramentas e materiais, preparo de materiais para uso, pequenas atividades de acabamento e transporte de materiais.</p>
+          </li>
+          <li class="item">
+            <h4>Auxiliar de Produção - Shopee</h4>
+            <em>Abril de 2023 - Maio de 2023</em>
+            <p>auxiliava no transporte, separação e despacho de mercadorias, garantia a qualidade e segurança dos produtos que futuramente seriam enviados para entrega.</p>
+          </li>
+          <li class="item">
+            <h4>Ajudante Geral - JSL S/A</h4>
+            <em>Maio de 2024 - Dezembro de 2024</em>
+            <p>Auxiliava na organização do ambiente, assim como organização das mercadorias em estoque, auxiliava na entrega de matéria prima e garantia o funcionamento constante das máquinas.</p>
+          </li>
+          <li class="item">
+            <h4>Auxiliar Administrativo - Apreseg Assessoria</h4>
+            <em>Janeiro de 2025 - Fevereiro de 2025</em>
+            <p>auxiliava nas demandas administrativas no escritório, fazendo agendamentos, atendendo clientes, verificando cadastros e entregando documentos.</p>
+          </li>
+        </ul>
+      </section>
+      <section class="card">
+        <h3 class="title">Cursos Profissionalizantes</h3>
+        <ul class="description">
+          <li class="item">
+            <h4>Lógica de Programação</h4>
+            <em>Senai</em>
+          </li>
+          <li class="item">
+            <h4>Manutenção de Computadores e Celulares</h4>
+            <em>CEBRAC Cursos Profissionalizantes</em>
+          </li>
+        </ul>
+      </section>
+      <section class="card">
+        <h3 class="title">Idiomas</h3>
+        <ul class="description">
+          <li class="item">
+            <h4>Português</h4>
+            <em>Nativo</em>
+          </li>
+          <li class="item">
+            <h4>Ingles</h4>
+            <em>Intermediário</em>
+          </li>
+        </ul>
+      </section>
+  </main>
+</body>
 </html>
